feat: :lipstick: Page base Desing
The new desing has been added in this base page

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <!-- PRESENTACION -->
     <main class="caja_main">
         <div class="logo_div">
-            <img src="storage/img/Studio_Ghibli_logo.svg.png" alt="">
+            <img src="storage/img/140883715_3586712831413608_6505209936049002406_n.jpg" alt="">
         </div>
         <div class="des_div">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita doloremque minima eaque impedit, id possimus repudiandae magni veniam aut eum rerum harum nulla neque reprehenderit distinctio a illum quidem unde.</p>
+            <p>Si te gusta el anime minimalista y llena de encanto, Studio Ghibli es para ti. <br>
+                Descubre la magia creada por Hayao Miyazaki a través de historias que parecen sueños animados.
+                Sigue leyendo y déjate envolver por este universo tan especial.</p>
         </div>
-        <div class="div_button">
-            <button>Go To More</button>
-        </div>
+            <a href="views/example.html" class="div_button"><button>Go To More</button></a>
     </main>
 </body>
 </html>
